# lawglance

./: .env.example  .gitignore  AGENTS.md  DOCS_AUDIT_REPORT.md  LICENSE.md  Makefile  README.md  app.py  gap-finder-state.md  legacy_api_client.py  prompts.py  pyproject.toml  requirements.txt  sitecustomize.py  skills-lock.json  test.ipynb
backend-cloudflare/: .gitignore  Dockerfile  README.md  pyproject.toml  wrangler.backend-proxy.jsonc  wrangler.toml
backend-cloudflare/src/: entry.py  worker.ts
backend-vercel/: .env.example  .vercelignore  requirements.txt  vercel.json
config/: fetch_policy.yaml  ops_alert_thresholds.json  prompts.yaml  source_policy.yaml
docs/: IMMCAD_System_Overview.md  LawGlance_Documentation.md  development-environment.md
frontend-web/: .dev.vars.example  .env.example  .gitignore  README.md  next.config.mjs  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  vitest.config.ts  wrangler.jsonc
legacy/: __init__.py
scripts/: build_case_law_scorecard.py  check_cloudflare_edge_proxy_contract.sh  check_cloudflare_free_plan_readiness.sh  check_cloudflare_named_origin_stack_health.sh  check_cloudflare_named_tunnel_codespace_runtime_health.sh  check_cloudflare_quick_bridge_health.sh  check_repository_hygiene.sh  cloudflare_runtime_config.py  deploy_cloudflare_gemini_mvp_no_github.sh  evaluate_ops_alerts.py  finalize_cloudflare_named_tunnel_cutover.sh  generate_ingestion_plan.py  generate_jurisdiction_eval_report.py  generate_module_dependency_diagram.py  git_secret_env.sh  install_cloudflare_named_tunnel_systemd_stack.sh  (+35 more)
(+449 files in other folders)
