[project]
name = "immcad-backend-cloudflare-native"
version = "0.1.0"
description = "Native Cloudflare Python Worker runtime scaffold for IMMCAD backend."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0,<1",
    "httpx>=0.27.0,<1",
    "pydantic>=2.9.0,<3",
    "python-multipart>=0.0.9,<1",
    "pyyaml>=6.0.2,<7",
]

[dependency-groups]
dev = [
    "workers-py",
    "workers-runtime-sdk",
]
